# animeRender

./: .gitignore  CMakeLists.txt  README.md  TutorialConfig.h.in  main.cpp  main2.cpp  main3_shader.cpp  main4_texture.cpp  main5_math.cpp  main6_space.cpp
Shaders/: defaultshader.fs.glsl  defaultshader.vs.glsl
Shaders/chapter1/: readtexture.fs.glsl  readtexture.vs.glsl  transshader.fs.glsl  transshader.vs.glsl
module/shader/: Shader.cpp  Shader.h
module/texture/: texture.cpp  texture.h
